log
Thu 28 Sep 2023 03:31:08 PM UTC: 
 tests:  0|4
total_score: 0/70
143a116
Thu 28 Sep 2023 04:01:05 PM UTC: 
 heap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:47:1: error: control reaches end of non-void function [-Werror=return-type]
   47 | }
      | ^
heap.c:41:68: error: ‘*newHeap.capac’ may be used uninitialized [-Werror=maybe-uninitialized]
   41 |   newHeap->heapArray = (heapElem*)malloc(sizeof(heapElem) * newHeap->capac);
      |                                                             ~~~~~~~^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
d243153
Thu 28 Sep 2023 04:01:23 PM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:41:68: error: ‘*newHeap.capac’ may be used uninitialized [-Werror=maybe-uninitialized]
   41 |   newHeap->heapArray = (heapElem*)malloc(sizeof(heapElem) * newHeap->capac);
      |                                                             ~~~~~~~^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
6bfef12
Thu 28 Sep 2023 04:02:37 PM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|4
total_score: 0/70
30528a2
Thu 28 Sep 2023 04:03:23 PM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|4
total_score: 0/70
1fb810b
Thu 28 Sep 2023 04:20:39 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
c69719b
Thu 28 Sep 2023 04:20:57 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
06c9828
Thu 28 Sep 2023 04:37:25 PM UTC: 
 heap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
3dd28a5
Thu 28 Sep 2023 04:38:14 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:25:23: error: incompatible types when returning type ‘heapElem’ {aka ‘struct nodo’} but ‘void *’ was expected
   25 |   return pq->heapArray[0];
      |          ~~~~~~~~~~~~~^~~
heap.c:26:1: error: control reaches end of non-void function [-Werror=return-type]
   26 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
946911b
